cabal-version:      3.4
name:               eventuo11y
version:            0.1.0.0
synopsis: An event-oriented observability library
description:
  An event-oriented observability library.
bug-reports: https://github.com/shlevy/eventuo11y/issues
license: Apache-2.0
license-file: LICENSE
author:             Shea Levy
maintainer:         shea@shealevy.com
copyright: Copyright 2022 Shea Levy.
category: Observability
extra-source-files: CHANGELOG.md
tested-with: GHC == { 8.10.7, 9.2.2 }

source-repository head
  type: git
  location: https://github.com/shlevy/eventuo11y

library
  exposed-modules:
    Observe.Event
    Observe.Event.Dynamic
    Observe.Event.Render.IO.JSON
    Observe.Event.Render.JSON
    Observe.Event.Servant.Client
    Observe.Event.Wai
  build-depends:
    base >=4.14 && <4.17,
    aeson ^>= 2.0.3.0,
    async ^>= 2.2.4,
    binary ^>= 0.8.9.0,
    bytestring ^>= 0.11.1.0,
    case-insensitive ^>= 1.2.1.0,
    containers ^>= 0.6.5.1,
    exceptions ^>= 0.10.4,
    http-types ^>= 0.12.3,
    monad-control ^>= 1.0.3.1,
    mtl ^>= 2.2.2,
    network ^>= 3.1.2.7,
    semigroupoids ^>= 5.3.7,
    servant-client-core ^>= 0.19,
    servant-client ^>= 0.19,
    text ^>= 1.2.5.0,
    time ^>= 1.11.1.1,
    transformers-base ^>= 0.4.6,
    uuid ^>= 1.3.15,
    http-media ^>= 0.8.0.0,
    wai ^>= 3.2.3,
    warp ^>= 3.3.19
  hs-source-dirs:   src
  default-language: Haskell2010
