cabal-version:      3.0
name:               eventuo11y
version:            0.1.0.0
synopsis:           An event-oriented observability library
description:        An event-oriented observability library.
bug-reports:        https://github.com/shlevy/eventuo11y/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Shea Levy
maintainer:         shea@shealevy.com
copyright:          Copyright 2022 Shea Levy.
category:           Observability
extra-source-files: CHANGELOG.md
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.2

source-repository head
  type:     git
  location: https://github.com/shlevy/eventuo11y

library
  exposed-modules:
    Observe.Event
    Observe.Event.Dynamic
    Observe.Event.Implementation
    Observe.Event.Render.IO.JSON
    Observe.Event.Render.JSON

  build-depends:
    , aeson          ^>=2.0.3.0
    , base           >=4.14      && <4.17
    , bytestring     >=0.10.12.0 && <0.12
    , exceptions     ^>=0.10.4
    , resourcet      ^>=1.2.4.3
    , text           ^>=1.2.5.0
    , time           >=1.9.3     && <1.12
    , unliftio-core  ^>=0.2.0.1
    , uuid           ^>=1.3.15

  hs-source-dirs:   src
  default-language: Haskell2010
